<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="7dp"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="10dp"
        tools:ignore="PrivateResource">


        <RelativeLayout
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">

            <ImageView
                android:id="@+id/img"
                android:transitionName="img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"
                tools:targetApi="lollipop" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/shadow_bottom"
                android:src="@drawable/bottom_shadow"
                android:layout_alignBottom="@id/img"
                tools:ignore="ContentDescription" />


            <ProgressBar
                android:id="@+id/progress_load_photo"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_marginTop="70dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:id="@+id/author"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:singleLine="true"
                android:layout_marginStart="16dp"
                android:text="@string/author"
                android:gravity="bottom"
                android:layout_alignLeft="@id/title"
                android:layout_alignStart="@id/title"
                android:layout_alignRight="@id/layoutData"
                android:layout_alignTop="@id/layoutData"
                android:layout_alignEnd="@id/layoutData"
                tools:ignore="RtlHardcoded"
                android:layout_marginLeft="16dp" />
            
            <FrameLayout
                android:id="@+id/layoutData"
                android:layout_below="@+id/img"
                android:background="@drawable/round_white"
                android:padding="5dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:src="@drawable/ic_date"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/publishedAd"
                    android:textColor="#606060"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_01_january_1990"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27dp"
                    android:layout_marginRight="10dp" />

            </FrameLayout>
            
            
            <TextView
                android:id="@+id/title"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/title"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/desc"
                android:layout_below="@id/title"
                android:text="@string/desc"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/source"
                android:layout_below="@id/desc"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@color/colorTextTitle"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/source"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/time"
                android:layout_below="@id/desc"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:layout_toEndOf="@id/source"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/time"
                android:layout_toRightOf="@id/source" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>